FlightPath 6.x Changelog
========================

2021-07-31
  Removed extra files from modules that used to be contrib, but are now in core (ex: CHANGELOG files)
  
  Added school_id to primary key for table degree_college
  
  

2021-07-30
  Fixed bug in Calendar with Upcoming Appointments still not showing "today" and "tomorrow" appointments correctly.  Went with different approach.
  
  Added ability to edit semester block numbers when editing a degree.

  Added ability to limit the number of selections on What If.  It defaults to 5.  This is to help keep students from blowing up the server by selecting
  every degree possible.
  
  Updated blank degrees (and schools) to be able to search by school.
  
  

2021-07-29
  Fixed deprecated notice.
  
  Calendar bug left in from dev-- it was not preventing students from clicking "back" and saving a second time.
  
  Added "spinner" attribute to button for confirm appointment and save.
  
  Added ICS attachment to notifications for student-initiated appointments.
  
  Removed dev code for external calendars.
  
  Added new code for caching external calendars for at least 5 minutes, to save frequent lookups.
  
  Added new code for Course objects, to keep track of all the semesters it appears in.  Good for combo-degrees.
  

2021-07-28
  Fixed bug in calendar's upcoming appointments tab, wasn't showing date ranges correctly for timezones.
  
  Added ability to handle attachments to fp_mail(), as well as string attachments to smtp module.
  
  Added ability to send attachments (string method) with notifications by email.
  
  Added new property that can be added to form elements (like submit buttons), "spinner" => TRUE.  This
  will cause a spinning graphic to appear when the button is pressed, and the button to disable itself so it
  cannot be pressed more than once.
  
  Made it so all "content" forms use the spinner property for their submit buttons.
  

2021-07-27