@@ -285,6 +285,7 @@ function calendar_display_upcoming_appointments() {
 
   fp_add_css(fp_get_module_path("system") . "/css/style.css");
   
+  fp_set_title('');
   
   $render = array();
   $render['#id'] = 'calendar_display_upcoming_appointments';
