@@ -1,0 +1,13 @@
+
+#element-wrapper-school_use_default_school_values {
+  border: 3px solid #888;
+  padding: 10px;
+  margin: 10px 0px 50px; 0px;
+  font-size: 1.2em;
+}
+
+#use-default-remember {
+  display: none;
+  margin-top: 10px;
+  font-weight: bold;
+}
