@@ -1043,7 +1043,7 @@ function system_school_data_form($school_id = 0) {
   $fs = "";  // The field name suffix.  We will add this to the end of all of our field names.  If this is the default school, leave blank.
   if (function_exists('schools_menu')) {
     $school_name = schools_get_school_name_for_id($school_id);
-    fp_set_title(t("Configure @school school settings", array('@school' => $school_name)));
+    fp_set_title(t("Configure %school school settings", array('%school' => $school_name)));
     if ($school_id !== 0) {
       $fs = "~~school_" . $school_id;
     }
