@@ -1601,6 +1601,7 @@ ___tabs{}
 
 .page-tabs-wrapper {
   margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 ul.tabs {  
